# cp-rs

./: .gitignore  BUNDLER_INTEGRATION.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  build.rs  bundle.sh  copilot-instructions.md  test.sh
.cargo/: config.toml
bundler-lib/: Cargo.toml
bundler-lib/src/: ast_bundler.rs  file_resolver.rs  filename_generator.rs  lib.rs
cp-lib/: Cargo.toml
cp-lib/examples/: custom_input.rs  error_handling.rs
cp-lib/src/: lib.rs
cp-lib/src/algorithms/: exponential.rs
cp-lib/src/io/: scanner.rs
cp-lib/tests/io/: scanner.rs
docs/: PERFORMANCE_TESTING.md  PULL_REQUESTS.md  TESTING.md
src/: bundler.rs  main.rs
src/.cph/: .main.rs_4bb224283642dabdb3cd9254e2f28b0a.prob
template/: ncr.cpp  prime.cpp
templates/: NCR_Using_Fact.cpp  binary_exponentiation.cpp  gcd_and_lcm.cpp  get_all_divisors.cpp  mod_inverse.cpp  normal_ncr.cpp  sieve.cpp  spf.cpp
