[package]
name = "cp-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ast_bundler"
path = "src/bin/ast_bundler.rs"

[dependencies]
regex = "1.10"
bundler-lib = { path = "./bundler-lib" }

[dependencies.cp-lib]
path="./cp-lib"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }