[package]
name = "bundler-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.0"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "bundler_lib"
path = "src/lib.rs"
